--- a/src/App.css
+++ b/src/App.css
@@ -1,114 +1,189 @@
+/*body {*/
+/*    background: #ffffff;*/
+/*    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",*/
+/*    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",*/
+/*    sans-serif;*/
+/*    color: white;*/
+/*}*/
+
+/*form {*/
+/*    max-width: 500px;*/
+/*    margin: 0 auto;*/
+/*    background-color: rgba(95, 0, 0, 0.62);*/
+/*}*/
+
+/*.form {*/
+/*    background: #0e101c;*/
+/*    max-width: 400px;*/
+/*    margin: 0 auto;*/
+/*}*/
+/*input {*/
+/*    display: block;*/
+/*    box-sizing: border-box;*/
+/*    width: 100%;*/
+/*    border-radius: 4px;*/
+/*    border: 1px solid white;*/
+/*    padding: 10px 15px;*/
+/*    margin-bottom: 10px;*/
+/*    font-size: 14px;*/
+/*}*/
+
+/*label {*/
+/*    line-height: 2;*/
+/*    text-align: left;*/
+/*    display: block;*/
+/*    margin-bottom: 13px;*/
+/*    margin-top: 20px;*/
+/*    color: white;*/
+/*    font-size: 14px;*/
+/*    font-weight: 200;*/
+/*}*/
+
+/*button[type="submit"],*/
+/*input[type="submit"] {*/
+/*    background: #ec5990;*/
+/*    color: white;*/
+/*    text-transform: uppercase;*/
+/*    border: none;*/
+/*    margin-top: 40px;*/
+/*    padding: 20px;*/
+/*    font-size: 16px;*/
+/*    font-weight: 100;*/
+/*    letter-spacing: 5px;*/
+/*}*/
+
+/*button[type="submit"]:hover,*/
+/*input[type="submit"]:hover {*/
+/*    background: #bf1650;*/
+/*}*/
+
+/*button[type="submit"]:active,*/
+/*input[type="button"]:active,*/
+/*input[type="submit"]:active {*/
+/*    transition: 0.3s all;*/
+/*    transform: translateY(3px);*/
+/*    border: 1px solid transparent;*/
+/*    opacity: 0.8;*/
+/*}*/
+
+/*input:disabled {*/
+/*    opacity: 0.4;*/
+/*}*/
+
+/*input[type="button"]:hover {*/
+/*    transition: 0.3s all;*/
+/*}*/
+
+/*button[type="submit"],*/
+/*input[type="button"],*/
+/*input[type="submit"] {*/
+/*    -webkit-appearance: none;*/
+/*}*/
+
+/*.App {*/
+/*    max-width: 600px;*/
+/*    margin: 0 auto;*/
+/*}*/
+
+/*button[type="button"] {*/
+/*    display: block;*/
+/*    appearance: none;*/
+/*    background: #333;*/
+/*    color: white;*/
+/*    border: none;*/
+/*    text-transform: uppercase;*/
+/*    padding: 10px 20px;*/
+/*    border-radius: 4px;*/
+/*}*/
+
+/*button {*/
+/*    display: block;*/
+/*    appearance: none;*/
+/*    margin-top: 40px;*/
+/*    border: 1px solid #333;*/
+/*    margin-bottom: 20px;*/
+/*    text-transform: uppercase;*/
+/*    padding: 10px 20px;*/
+/*    border-radius: 4px;*/
+/*}*/
 body {
-    background: #0e101c;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-    color: white;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
-
-form {
-    max-width: 500px;
-    margin: 0 auto;
-    background-color: rgba(95, 0, 0, 0.62);
-}
-
-.form {
-    background: #0e101c;
-    max-width: 400px;
-    margin: 0 auto;
-}
-input {
-    display: block;
-    box-sizing: border-box;
-    width: 100%;
-    border-radius: 4px;
-    border: 1px solid white;
-    padding: 10px 15px;
-    margin-bottom: 10px;
-    font-size: 14px;
-}
-
-label {
-    line-height: 2;
-    text-align: left;
-    display: block;
-    margin-bottom: 13px;
-    margin-top: 20px;
-    color: white;
-    font-size: 14px;
-    font-weight: 200;
-}
-
-button[type="submit"],
-input[type="submit"] {
-    background: #ec5990;
-    color: white;
-    text-transform: uppercase;
-    border: none;
-    margin-top: 40px;
-    padding: 20px;
-    font-size: 16px;
-    font-weight: 100;
-    letter-spacing: 5px;
-}
-
-button[type="submit"]:hover,
-input[type="submit"]:hover {
-    background: #bf1650;
-}
-
-button[type="submit"]:active,
-input[type="button"]:active,
-input[type="submit"]:active {
-    transition: 0.3s all;
-    transform: translateY(3px);
-    border: 1px solid transparent;
-    opacity: 0.8;
-}
-
-input:disabled {
-    opacity: 0.4;
-}
-
-input[type="button"]:hover {
-    transition: 0.3s all;
-}
-
-button[type="submit"],
-input[type="button"],
-input[type="submit"] {
-    -webkit-appearance: none;
-}
-
-.App {
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-button[type="button"] {
-    display: block;
-    appearance: none;
-    background: #333;
-    color: white;
-    border: none;
-    text-transform: uppercase;
-    padding: 10px 20px;
-    border-radius: 4px;
-}
-
-button {
-    display: block;
-    appearance: none;
-    margin-top: 40px;
-    border: 1px solid #333;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-    padding: 10px 20px;
-    border-radius: 4px;
+.account_entry h2 {
+    color: #363636;
+    font-size: 23px;
+    margin-bottom: 15px;
+    font-weight: 600;
 }
 .account_entry {
     width: 100%;
     margin-bottom: 20px;
     display: block;
     position: relative;
+}
+.account_entry .account_entry--input-label{
+    margin-bottom: 10px;
+}
+.input-main{
+    border: 1px solid #999;
+    font: inherit;
+    height: 40px;
+    direction: ltr;
+    text-align: left;
+    text-align-last: left;
+}
+.account_entry .input-main {
+    padding-left: 10px;
+    width: 100%;
+}
+.password-input-wrapper input{
+    border: none;
+    width: 100%;
+    font: inherit;
+    padding-left: 10px;
+    height: 40px;
+}
+.password-input-wrapper{
+    display: flex;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-item-align: stretch;
+    align-self: stretch;
+    background-color: #fff;
+    border: 1px solid #999;
+}
+.btn-normal{
+    background: #187daf;
+}
+.btn{
+    border: none;
+    border-radius: 10px;
+    font: inherit;
+    color: #fff;
+    height: 40px;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0 10px;
+    font-weight: 600;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-align: center;
+    align-items: center;
+    white-space: normal;
+    cursor: pointer;
+}
+.account {
+    padding-bottom: 15px;
+}
+.account form{
+    max-width: 400px;
+    margin: 0 auto;
+}
+*{
+    box-sizing: border-box;
 }
